# FYP-LLM

./: README.md  compare_models.py  config.json  config_14b_optimized.json  config_32b_tesla_t4.json  config_7b_optimized.json  config_colab.json  config_memory_efficient.json  inference.py  main.py  prepare_counsel_dataset.py  prepare_dataset.py  pyproject.toml  sample_data.json  test_setup.py  train_colab.py  train_qwen_counsel.py
counsel_chat_processed/train/: cache-10d888d396a70506.arrow  cache-1a45c962056c6af8.arrow  cache-4ca80cf0b419d4cd.arrow  cache-5a4b39e845136a40.arrow  cache-8eab269da4329675.arrow  cache-f82be2cbffd8797a.arrow  data-00000-of-00001.arrow  dataset_info.json  state.json
counsel_chat_processed/validation/: cache-1a3f2e3a392854df.arrow  cache-222269a151c93567.arrow  cache-383f97ae69ce3065.arrow  cache-61452dbb62072eb6.arrow  cache-8618a2b38e1c9591.arrow  cache-e0a92a461e0d34d5.arrow  data-00000-of-00001.arrow  state.json
qwen2.5-counsel-chat-finetuned/: adapter_config.json  training_config.json
qwen2.5-counsel-chat-finetuned/checkpoint-23/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
qwen2.5-counsel-chat-finetuned/runs/Oct03_02-04-06_Yus-MacBook-Air.local/: events.out.tfevents.1759428247.Yus-MacBook-Air.local.58263.0
