[project]
name = "fyp-llm"
version = "0.1.0"
description = "FYP LLM Training with Qwen2.5 and Counsel Chat Dataset"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "datasets>=2.14.0",
    "transformers>=4.36.0",
    "torch>=2.0.0,<2.8.0",  # Use stable version before 2.8.0
    "accelerate>=0.24.0",
    "peft>=0.7.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
# Optional dependencies for different platforms
cuda = [
    "bitsandbytes>=0.41.0",
    "trl>=0.7.0",
]

# Platform compatibility handled by torch version constraint